lw1_3/polish_init

--- a/lw1/lw1_4/index.html
+++ b/lw1/lw1_4/index.html
@@ -8,7 +8,7 @@
   <title>lw1_4</title>
 </head>
 <body>
-<script src="../functions/functions.js"></script>
+<script src="functions/functions.js"></script>
 <script>
     // Вспомогательные функции для создания объектов
     function createSlide(id, background = { type: 'none' }, elements = []) {
