--- a/lw1/lw1_3/index.html
+++ b/lw1/lw1_3/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>prefix</title>
 </head>
 <body>
-
+<script src="polish.js"></script>
 </body>
 </html>
