--- a/lw/lw2_2/index.html
+++ b/lw/lw2_2/index.html
@@ -29,26 +29,30 @@
     }
 
     function renamePresentation(newName, pres) {
-        return Object.assign(Object.assign({}, pres), { title: newName });
+        return Object.assign(Object.assign({}, pres), {title: newName});
     }
+
     function addSlide(newSlide, pres) {
-        return Object.assign(Object.assign({}, pres), { slides: [
+        return Object.assign(Object.assign({}, pres), {
+            slides: [
                 ...pres.slides,
                 newSlide
-            ] });
+            ]
+        });
     }
+
     function removeSlide(slideIdsToRemove, pres) {
         const newSlides = pres.slides.filter(slide => !slideIdsToRemove.includes(slide.id));
         const newSelectedSlideIds = pres.selection.selectedSlideIds.filter(id => !slideIdsToRemove.includes(id));
         let newSelection = pres.selection;
         if (!newSelectedSlideIds.length && newSlides.length > 0) {
-            newSelection = Object.assign(Object.assign({}, pres.selection), { selectedSlideIds: [newSlides[0].id] });
+            newSelection = Object.assign(Object.assign({}, pres.selection), {selectedSlideIds: [newSlides[0].id]});
+        } else {
+            newSelection = Object.assign(Object.assign({}, pres.selection), {selectedSlideIds: newSelectedSlideIds});
         }
-        else {
-            newSelection = Object.assign(Object.assign({}, pres.selection), { selectedSlideIds: newSelectedSlideIds });
-        }
-        return Object.assign(Object.assign({}, pres), { slides: newSlides, selection: newSelection });
+        return Object.assign(Object.assign({}, pres), {slides: newSlides, selection: newSelection});
     }
+
     function moveSlide(slideId, newIndex, pres) {
         const slides = [...pres.slides];
         const curIndex = slides.findIndex(slide => slide.id === slideId);
@@ -62,57 +66,67 @@
             movedSlide,
             ...filteredSlides.slice(newIndex)
         ];
-        return Object.assign(Object.assign({}, pres), { slides: newSlides });
+        return Object.assign(Object.assign({}, pres), {slides: newSlides});
     }
+
     function addElementToSlide(slideId, newElement, pres) {
         const targetSlide = pres.slides.find(slide => slide.id === slideId);
         if (!targetSlide) {
             return pres;
         }
-        const updatedSlide = Object.assign(Object.assign({}, targetSlide), { elements: [
+        const updatedSlide = Object.assign(Object.assign({}, targetSlide), {
+            elements: [
                 ...targetSlide.elements,
                 newElement
-            ] });
+            ]
+        });
         return updateSlide(updatedSlide, pres);
     }
+
     function removeElementsFromSlide(slideId, elementIds, pres) {
         const targetSlide = pres.slides.find(slide => slide.id === slideId);
         if (!targetSlide) {
             return pres;
         }
-        const updatedSlide = Object.assign(Object.assign({}, targetSlide), { elements: targetSlide.elements.filter(el => !elementIds.includes(el.id)) });
+        const updatedSlide = Object.assign(Object.assign({}, targetSlide), {elements: targetSlide.elements.filter(el => !elementIds.includes(el.id))});
         const newSelectedElementIds = pres.selection.selectedElementIds.filter(id => !elementIds.includes(id));
-        const newSelection = Object.assign(Object.assign({}, pres.selection), { selectedElementIds: newSelectedElementIds });
-        return Object.assign(Object.assign({}, updateSlide(updatedSlide, pres)), { selection: newSelection });
+        const newSelection = Object.assign(Object.assign({}, pres.selection), {selectedElementIds: newSelectedElementIds});
+        return Object.assign(Object.assign({}, updateSlide(updatedSlide, pres)), {selection: newSelection});
     }
+
     function changeElPosition(slideId, elementId, newPosition, pres) {
-        return updateElementInSlide(slideId, elementId, (el) => (Object.assign(Object.assign({}, el), { position: newPosition })), pres);
+        return updateElementInSlide(slideId, elementId, (el) => (Object.assign(Object.assign({}, el), {position: newPosition})), pres);
     }
+
     function changeElSize(slideId, elementId, newSize, pres) {
-        return updateElementInSlide(slideId, elementId, (el) => (Object.assign(Object.assign({}, el), { size: newSize })), pres);
+        return updateElementInSlide(slideId, elementId, (el) => (Object.assign(Object.assign({}, el), {size: newSize})), pres);
     }
+
     function changeTextElContent(slideId, elementId, newContent, pres) {
-        return updateElementInSlide(slideId, elementId, (el) => (Object.assign(Object.assign({}, el), { content: newContent })), pres);
+        return updateElementInSlide(slideId, elementId, (el) => (Object.assign(Object.assign({}, el), {content: newContent})), pres);
     }
+
     function changeFontFamily(slideId, elementId, newFF, pres) {
-        return updateElementInSlide(slideId, elementId, (el) => (Object.assign(Object.assign({}, el), { fontFamily: newFF })), pres);
+        return updateElementInSlide(slideId, elementId, (el) => (Object.assign(Object.assign({}, el), {fontFamily: newFF})), pres);
     }
+
     function changeSlideBg(slideId, newBg, pres) {
         const targetSlide = pres.slides.find(slide => slide.id === slideId);
         if (!targetSlide) {
             return pres;
         }
-        const updatedSlide = Object.assign(Object.assign({}, targetSlide), { background: newBg });
+        const updatedSlide = Object.assign(Object.assign({}, targetSlide), {background: newBg});
         return updateSlide(updatedSlide, pres);
     }
+
     /* на будущее */
     function setSelectedSlides(slideIds, pres) {
-        return Object.assign(Object.assign({}, pres), { selection: Object.assign(Object.assign({}, pres.selection), { selectedSlideIds: slideIds }) });
-    }
-    function setSelectedElements(elementsIds, pres) {
-        return Object.assign(Object.assign({}, pres), { selection: Object.assign(Object.assign({}, pres.selection), { selectedElementIds: elementsIds }) });
+        return Object.assign(Object.assign({}, pres), {selection: Object.assign(Object.assign({}, pres.selection), {selectedSlideIds: slideIds})});
     }
 
+    function setSelectedElements(elementsIds, pres) {
+        return Object.assign(Object.assign({}, pres), {selection: Object.assign(Object.assign({}, pres.selection), {selectedElementIds: elementsIds})});
+    }
 
     // tests
     const presentationMin = {
@@ -136,24 +150,23 @@
     };
 
     console.log('Тест ф-ии renamePresentation');
-    console.log(presentationMin);
-    console.log(renamePresentation('newTestMin', presentationMin));
+    console.log('Было: ', presentationMin);
+    console.log('Стало: ', renamePresentation('newTestMin', presentationMin));
     console.log('');
 
     console.log('Тест ф-ии addSlide');
-    console.log(presentationMin);
+    console.log('Было: ', presentationMin);
     const presentationWithSlides = addSlide(slideMin, presentationMin);
-    console.log(presentationWithSlides);
+    console.log('Стало: ', presentationWithSlides);
     console.log('');
 
     console.log('Тест ф-ии removeSlide');
-    console.log(presentationWithSlides);
+    console.log('Было: ', presentationWithSlides);
     const presentationWithoutSlides = removeSlide(['10'], presentationWithSlides);
-    console.log(presentationWithoutSlides);
+    console.log('Стало: ', presentationWithoutSlides);
     console.log('');
 
     console.log('Тест ф-ии moveSlide');
-    console.log(presentationWithSlides);
     let presentationSeveralSlides = addSlide({
         id: '11',
         background: null,
@@ -163,12 +176,12 @@
         background: null,
         elements: [],
     }, presentationWithSlides));
-    // presentationSeveralSlides = moveSlide('11', 1, presentationWithSlides);
-    console.log(moveSlide('11', 2, presentationSeveralSlides));
+    console.log('Было: ', presentationSeveralSlides);
+    console.log('Стало: ', moveSlide('11', 1, presentationSeveralSlides));
     console.log('');
 
     console.log('Тест ф-ии addElementToSlide');
-    console.log(presentationSeveralSlides);
+    console.log('Было: ', presentationSeveralSlides);
     const textEl = {
         id: '100',
         position: {
@@ -187,52 +200,52 @@
     }
     console.log('textElement: ', textEl);
     const presSlideWithEl = addElementToSlide('11', textEl, presentationSeveralSlides);
-    console.log(presSlideWithEl);
+    console.log('Стало: ', presSlideWithEl);
     console.log('');
 
     console.log('Тест ф-ии removeElementsFromSlide');
-    console.log(presSlideWithEl);
-    console.log(removeElementsFromSlide('11', ['100'], presSlideWithEl));
+    console.log('Было: ', presSlideWithEl);
+    console.log('Стало: ', removeElementsFromSlide('11', ['100'], presSlideWithEl));
     console.log('');
 
     console.log('Тест ф-ии changeElPosition');
-    console.log(presSlideWithEl);
+    console.log('Было: ', presSlideWithEl);
     const newPos = {
         x: '0',
         y: '1'
     };
     console.log(newPos);
-    console.log(changeElPosition('11', '100', newPos, presSlideWithEl));
+    console.log('Стало: ', changeElPosition('11', '100', newPos, presSlideWithEl));
     console.log('');
 
     console.log('Тест ф-ии changeElSize');
-    console.log(presSlideWithEl);
+    console.log('Было: ', presSlideWithEl);
     const newSize = {
         w: '100',
         h: '100'
     };
     console.log(newSize);
-    console.log(changeElSize('11', '100', newSize, presSlideWithEl));
+    console.log('Стало: ', changeElSize('11', '100', newSize, presSlideWithEl));
     console.log('');
 
     console.log('Тест ф-ии changeTextElContent');
-    console.log(presSlideWithEl);
-    console.log(changeTextElContent('11', '100', 'new text content for element', presSlideWithEl));
+    console.log('Было: ', presSlideWithEl);
+    console.log('Стало: ', changeTextElContent('11', '100', 'new text content for element', presSlideWithEl));
     console.log('');
 
     console.log('Тест ф-ии changeFontFamily');
-    console.log(presSlideWithEl);
-    console.log(changeFontFamily('11', '100', 'Arial', presSlideWithEl));
+    console.log('Было: ', presSlideWithEl);
+    console.log('Стало: ', changeFontFamily('11', '100', 'Arial', presSlideWithEl));
     console.log('');
 
     console.log('Тест ф-ии changeSlideBg');
-    console.log(presSlideWithEl);
+    console.log('Было: ', presSlideWithEl);
     const newBg = {
         type: 'solid',
         color: '#fff',
     }
-    console.log()
-    console.log(changeSlideBg('11', newBg, presSlideWithEl));
+    console.log('new bg: ', newBg);
+    console.log('Стало: ', changeSlideBg('11', newBg, presSlideWithEl));
     console.log('');
 </script>
 </body>
